--- a/Views/Auth/index.cshtml
+++ b/Views/Auth/index.cshtml
@@ -1,1 +1,21 @@
-<h1>hello</h1>
+@model LoginViewModel
+
+<h2>Login</h2>
+
+<form method="post">
+  <label>Email:</label>
+  <input type="email" name="Email" required />
+  <br />
+
+  <label>Password:</label>
+  <input type="password" name="Password" required />
+  <br />
+
+  <button type="submit">Login</button>
+  <p>non sei registrato? <a asp-controller="Auth" asp-action="Register">registrati</a></p>
+</form>
+
+@if (!string.IsNullOrEmpty(ViewBag.Error))
+  {
+  <p style="color:red;">@ViewBag.Error</p>
+  }
